--- a/JS/exercicio7/style.css
+++ b/JS/exercicio7/style.css
@@ -1,14 +1,22 @@
-#imagens img {
-    height: 120px;
-    width: 100px;
+#principal {
+    height: 280px;
+    width: 390px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+}
+
+#imagens {
     display: flex;
     justify-content: center;
-    gap: 5px;
+    align-items: center;
+    gap: 15px;
+    margin-top: 40px;
 }
 
-#principal {
-    height: 230px;
-    width: 350px;
+#imagens img {
+    height: 120px;
+    width: 160px;
+    border-radius: 5px;
+    object-fit: cover;
 }
-    
-
